--- a/public/index.html
+++ b/public/index.html
@@ -7,136 +7,81 @@
   <meta name="keywords" content="too,soon,test,joke,lolz"/>
   <meta name="author" content="Kat Lau">
 
-  <link rel="stylesheet" href="./main.css" type="text/css" media="screen">
   <link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css">
+  <link rel="stylesheet" href="./main.css" type="text/css" media="screen">
+  <link rel="stylesheet" href="./redmond.css" type="text/css" media="screen">
 
   <script src="./jquery.js" type="text/javascript"></script>
+  <script src="./jquery-ui.js" type="text/javascript"></script>
   <script src="./main.js" type="text/javascript"></script>
 
 
+
 </head>
-  <body>
-	<div id="header">
-		<div id="headercontent">
-		<div id="menu1" class="menu"><a href="./index.html"><b>TFLN:</b>Yale</a></div>
-	    <div id="menu2" class="menu"><a href="./index.html">Home</a></div>
-		<div id="menu3" class="menu"><a href="./index.html">Profile</a></div>
-		</div>
-	</div>
-	<div id="main">
-		Texts from Last Night: Yale
-		<div id="new_post">Submit your TFLN</div>
-		<div id="updates">
-				Five new texts since your last visit! <a href="./index.html">Click</a> to reveal.
-		</div>
+<body>
+<div class="container">
+<div id="toosoontest">
+	<h1 class="title"><strong>TooSoonTest</strong>.com</h1>
+	<h3 class ="description"> Do you struggle with comedic timing? Have you ever made a joke only to be met with an awkward pause and a "...too soon, man."?</h3>
+	<p>
+	<h4 class="neverfear">Well, never fear. Too Soon Test is here to help. Simply enter the details of the situation below, and our patented Too Soon Technology&#174; will let you know for sure if the world is ready for your humor.</h4> 
+	<form class="form-stacked">
+		What were you talking about?<input type="text" /><br />
+		
+		Atrocity Scale of the event you referenced
+	    <label for="atrocity">from 1-100:</label>
+		<input type="text" id="atrocityamount" />
+		<div id="atrocityslider"></div><br />
+		
+		Relevance to current events
+		<label for="current">from 1-10:</label>
+		<input type="text" id="currentamount" />
+		<div id="currentslider"></div><br />
 
-	<!-- blank text for cloning-->
-		<div id="new_text_box" style="display:none">
-		  <form method="post" action="/">
-	      <textarea id="new_text_body" class="defaultText" alt="(541) GTFO" name="post[content]"/>(925) GTFO</textarea>
-	      <input type="submit" value="Submit the Shame" id="submit_text" />
-	      </form>
-	    </div>
+		How many lives were directly affected by this event?
+		<input type="text" class="span2" /><br />
+		
+		How many lives were indirectly affected by this event?
+		<input type="text" class="span2" /><br />
+		
+		Degrees of separation between your audience and the event:
+		<select>
+		<option value="1">1</option>
+		<option value="2">2</option>
+		<option value="3">3</option>
+		<option value="4">4</option>
+		<option value="5">5</option>
+		<option value="6">6</option>
+		<option value="kevinbacoon">Kevin Bacon</option>
+		</select><br />
+		
+		How long since the event (in years)?
+		<input type="text" class="span2" /><br />
+		
+		Did anyone laugh?
+		<input type="radio" value="yes" /> Yes!<br />
+		<input type="radio" value="no" /> No...<br />
+		<input type="radio" value="me" /> I did<br />
+		
+		Did your joke involve any of the following groups?
+		<input type="checkbox" value="nazis" />Nazis<br />
+		<input type="checkbox" value="communists" />Communists<br />
+		<input type="checkbox" value="asians" />Asians in a Library<br />
 
-		<% for ( var i = 0; i < posts.length; i++ )  { %>
+		Great! Now click here to get your results...
+		<button class="btn large info">Can you handle the truth?</button>
+	</form>
+</div>
+	
+<div id="results">
+	
+	<a href="/sneak.html">Click here</a> to see how the algorithm works...
+</div>
 
-		    <div class="text">
-		      <p class="text_body"><%= posts[ i ].content %></p>
-		      <div class="text_time"><%= posts[ i ].date_display() %></div>
-		    </div>
+<div id="sneak">
+</div>
 
-
-		  <% } %>  
-
-
-			<div class="text">
-					<p class="text_body">
-					<b>(808)</b> I just read webcomics in the library for three hours<br />
-					<b>(917)</b> Model Student Medeiros<br />
-					<b>(808)</b> That's what they called me in 'nam<br />
-					<b>(917)</b> THIS ISN'T 'NAM
-					<br />
-					</p>
-				<div class="text_time">
-						5 hours ago...
-				</div>
-			</div>
-			<div class="text">
-				<p class="text_body">
-					<b>(214)</b> Be careful whenever you get home. There is a baby gate in the kitchen. You will need to step over it. We are trying to catch a rat.
-				<br />
-				</p>
-				<div class="text_time">
-						Yesterday...
-				</div>
-			</div>
-			<div class="text">
-				<p class="text_body">
-					<b>(413)</b> you need to come to my room. imbhigh as fck and camtfeel my feet.
-					<br />
-					</p>
-				<div class="text_time">
-						2 days ago...
-				</div>
-			</div>
-			<div class="text">
-				<p class="text_body">
-					<b>(310)</b> SHOULDA COME TO GOTHAM<br />
-					<b>(248)</b> Damn it :[<br />
-					<b>(310)</b> Actually it was kind of creepy and not fun at all. Or maybe not, I dunno, I'm so fuckin baked right now.
-					<br />
-					</p>
-				<div class="text_time">
-						3 days ago...
-				</div>
-			</div>
-			<div class="text">
-				<p class="text_body">
-					<b>(310)</b> well if you work diligently and wanna break we should go out!!<br />
-					<b>(248)</b> Haha if I finish my homosexuality paper. which I haven't started.<br />
-					<b>(310)</b> You're straight homo. You got this.
-					<br />
-					</p>
-				<div class="text_time">
-						6 days ago...
-				</div>
-			</div>
-			<div class="text">
-				<p class="text_body">
-					<b>(708)</b> I hope my drunk convo with random people I dont know will not have consequences for you...
-					<br />
-					</p>
-				<div class="text_time">
-						A week ago...
-				</div>
-			</div>
-			<div class="text">
-				<p class="text_body">
-					<b>(347)</b> 24 hours later and my entryway still reeks of beer, vomit, and lost dreams. damn you spring fling. ps want some cookies?
-					<br />
-					</p>
-				<div class="text_time">
-						A few months ago...
-				</div>
-			</div>
-			<div class="text">
-				<p class="text_body">
-					<b>(808)</b> You ditched me!<br />
-					<b>(860)</b> That I did. Planned you to with me hook up? If so, alas for thine soul, forever dissatisfied
-					<br />
-					</p>
-				<div class="text_time">
-						About a year ago...
-				</div>
-			</div>
-	</div>
-	<div id="footer">&copy; Yeah, I mean, you could copy this or whatever...idgaf</div>
-
-	<!-- that jquery tutorial told me to put my jquery links here...-->
-
-
-
-
-
-  </body>
+</div>
+	<div id="footer">TooSoonTest assumes no responsibility for jokes that don't land. &copy;2011 TooSoonTest</div>
+</body>
 </html>
