--- a/public/index.html
+++ b/public/index.html
@@ -58,17 +58,17 @@
 		How long since the event (in years)?
 		<input type="text" class="span2" /><br />
 		
-		Did anyone laugh?
+		Did anyone laugh?<br />
 		<input type="radio" value="yes" /> Yes!<br />
 		<input type="radio" value="no" /> No...<br />
 		<input type="radio" value="me" /> I did<br />
 		
-		Did your joke involve any of the following groups?
+		Did your joke involve any of the following groups?<br />
 		<input type="checkbox" value="nazis" />Nazis<br />
 		<input type="checkbox" value="communists" />Communists<br />
 		<input type="checkbox" value="asians" />Asians in a Library<br />
 
-		Great! Now click here to get your results...
+		Great! Now click here to get your results...<br />
 		<button class="btn large info">Can you handle the truth?</button>
 	</form>
 </div>
