--- a/public/index.html
+++ b/public/index.html
@@ -15,61 +15,68 @@
   <script src="./jquery-ui.js" type="text/javascript"></script>
   <script src="./main.js" type="text/javascript"></script>
 
-
-
 </head>
 <body>
 <div class="container">
 <div id="toosoontest">
-	<h1 class="title"><strong>TooSoonTest</strong>.com</h1>
-	<h3 class ="description"> Do you struggle with comedic timing? Have you ever made a joke only to be met with an awkward pause and a "...too soon, man."?</h3>
-	<p>
-	<h4 class="neverfear">Well, never fear. Too Soon Test is here to help. Simply enter the details of the situation below, and our patented Too Soon Technology&#174; will let you know for sure if the world is ready for your humor.</h4> 
-	<form class="form-stacked">
-		What were you talking about?<input type="text" /><br />
+	<h1 class="title"><strong>TooSoonTest</strong><span id="com">.com</span></h1>
+	<p class ="description">Do you struggle with comedic timing? Have you ever made a joke only to be met with an awkward pause and a "...too soon, man."?<br /></p>
+	<p class="description">Well, never fear! We're here to help. Simply enter the details of the situation below, and our patented Too Soon Technology&#174; will let you know for sure if the world is ready for your humor. 
+	</p>
+	<form>
+		<div class="question">
+		What were you talking about?<br /><input type="text" id="about"/>
+		</div>
 		
-		Atrocity Scale of the event you referenced
-	    <label for="atrocity">from 1-100:</label>
+		<div class="question">
+		Atrocity Scale of the event you referenced (from 1-100):<br />
 		<input type="text" id="atrocityamount" />
-		<div id="atrocityslider"></div><br />
+		<div id="atrocityslider" class="slider"></div>
+		</div>
 		
-		Relevance to current events
-		<label for="current">from 1-10:</label>
-		<input type="text" id="currentamount" />
-		<div id="currentslider"></div><br />
-
+		<div class="question">
 		How many lives were directly affected by this event?
-		<input type="text" class="span2" /><br />
+		<input type="text" class="span2" />
+		</div>
 		
-		How many lives were indirectly affected by this event?
-		<input type="text" class="span2" /><br />
-		
+		<div class="question">
 		Degrees of separation between your audience and the event:
-		<select>
+		<select class="span2">
 		<option value="1">1</option>
 		<option value="2">2</option>
 		<option value="3">3</option>
 		<option value="4">4</option>
 		<option value="5">5</option>
 		<option value="6">6</option>
-		<option value="kevinbacoon">Kevin Bacon</option>
-		</select><br />
+		<option value="kevinbacon">Kevin Bacon</option>
+		</select>
+		</div>
 		
+		<div class="question">
 		How long since the event (in years)?
-		<input type="text" class="span2" /><br />
+		<input type="text" class="span2" />
+		</div>
 		
+		<div class="question">
 		Did anyone laugh?<br />
-		<input type="radio" value="yes" /> Yes!<br />
-		<input type="radio" value="no" /> No...<br />
-		<input type="radio" value="me" /> I did<br />
+		<input type="radio" name="laugh" value="yes" class="choose" /> Yes!<br />
+		<input type="radio" name="laugh" value="no" class="choose" /> No...<br />
+		<input type="radio" name="laugh" value="me" class="choose" /> I did
+		</div>
 		
+		<div class="question">
 		Did your joke involve any of the following groups?<br />
-		<input type="checkbox" value="nazis" />Nazis<br />
-		<input type="checkbox" value="communists" />Communists<br />
-		<input type="checkbox" value="asians" />Asians in a Library<br />
-
-		Great! Now click here to get your results...<br />
-		<button class="btn large info">Can you handle the truth?</button>
+		<input type="checkbox" value="nazis" class="choose" />Nazis<br />
+		<input type="checkbox" value="communists" class="choose" />Communists<br />
+		<input type="checkbox" value="asians" class="choose" />Asians in a Library
+		</div>
+		
+		<div class="question">
+		Great! Now click here to get your results...
+		</div><br />
+		
+		<button class="btn large info right">Can you handle the truth?</button>
+		
 	</form>
 </div>
 	
