--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,12 @@
   <meta name="author" content="Kat Lau">
 
   <link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css">
-  <link rel="stylesheet" href="./main.css" type="text/css" media="screen">
-  <link rel="stylesheet" href="./redmond.css" type="text/css" media="screen">
+  <link rel="stylesheet" href="main.css" type="text/css" media="screen">
+  <link rel="stylesheet" href="redmond.css" type="text/css" media="screen">
 
-<script src="./jquery.js" type="text/javascript"></script>
-<script src="./jquery-ui.js" type="text/javascript"></script>
-<script src="./main.js" type="text/javascript"></script>
+<script src="jquery.js" type="text/javascript"></script>
+<script src="jquery-ui.js" type="text/javascript"></script>
+<script src="main.js" type="text/javascript"></script>
 
 </head>
 <body>
