--- a/public/index.html
+++ b/public/index.html
@@ -67,9 +67,9 @@
 		<div class="question">
 		Did your joke involve any of the following groups?<br />
 		<input type="checkbox" value="nazis" class="choose" />Nazis<br />
-		<input type="checkbox" value="communists" class="choose" />Communists<br />
 		<input type="checkbox" value="asians" class="choose" />Asians in a Library<br />
-		<input type="checkbox" value="kim" class="choose" />Kim Jong-il
+		<input type="checkbox" value="kim" class="choose" />Kim Jong-il<br />
+		<input type="checkbox" value="occupy" class="choose" />Occupy Protesters
 		</div>
 		
 		<button class="btn large info right" id="submitbutton">Can you handle the truth?</button>
