--- a/public/sneak.html
+++ b/public/sneak.html
@@ -13,11 +13,22 @@
 	  <script src="./main.js" type="text/javascript"></script>
 
 
-	</head>
-	<body>
-		<div class="container">
-			blah blah blah algorithm stuff
-			
-		home button
+</head>
+<body>
+<div class="container">
+
+	The values you input on the form are plugged into the following formula:
+		<br />
+		<img src="./images/formula.jpeg" id="formula">
+		<br />
+		<div id = "sneakexplanation">
+	If the resulting value is greater than XX, it is indeed "too soon."<br />
+	If not, it's just soon enough.
 		</div>
-			
+		<a href="./index.html" id="backHome">Go back</a>
+</div>
+		
+<div id="footer">TooSoonTest assumes no responsibility for jokes that don't land. &copy;2011 TooSoonTest</div>
+
+</body>
+</html>	
