updated links to reflect new folders

--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,12 @@
   <meta name="author" content="Kat Lau">
 
   <link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css">
-  <link rel="stylesheet" href="./main.css" type="text/css" media="screen">
-  <link rel="stylesheet" href="./redmond.css" type="text/css" media="screen">
+  <link rel="stylesheet" href="./stylesheets/main.css" type="text/css" media="screen">
+  <link rel="stylesheet" href="./stylesheets/redmond.css" type="text/css" media="screen">
 
-<script src="./jquery.js" type="text/javascript"></script>
-<script src="./jquery-ui.js" type="text/javascript"></script>
-<script src="./main.js" type="text/javascript"></script>
+<script src="./scripts/jquery.js" type="text/javascript"></script>
+<script src="./scripts/jquery-ui.js" type="text/javascript"></script>
+<script src="./scripts/main.js" type="text/javascript"></script>
 
 </head>
 <body>
@@ -23,7 +23,7 @@
 	<p class ="description">Do you struggle with comedic timing? Have you ever made a joke only to be met with an awkward pause and a "...too soon, man."?<br /></p>
 	<p class="description">Well, never fear! We're here to help. Simply enter the details of the situation below, and our patented Too Soon Technology&#174; will let you know for sure if the world is ready for your humor. 
 	</p>
-	<form action="./results.html" name="testform" method="post" id="testform">
+	<form action="./results/index.html" name="testform" method="post" id="testform">
 		<div class="question">
 		What were you talking about?<br /><input type="text" id="about" name="about" />
 		</div>
@@ -72,7 +72,7 @@
 		<input type="checkbox" value="occupy" class="choose" name="groups" />Occupy Protesters
 		</div>
 		
-		<br /><a href="./results.html"><input type="submit" id="submitbutton" class="btn large info right" value="Can you handle the truth?" data-loading-text="working..."></a>		
+		<br /><a href="./results/index.html"><input type="submit" id="submitbutton" class="btn large info right" value="Can you handle the truth?" data-loading-text="working..."></a>		
 	</form>
 </div>
 
