--- a/public/index.html
+++ b/public/index.html
@@ -72,10 +72,21 @@
 		<input type="checkbox" value="occupy" class="choose" name="groups" />Occupy Protesters
 		</div>
 		
-		<br /><a href="./results/index.html"><input type="submit" id="submitbutton" class="btn large info right" value="Can you handle the truth?" data-loading-text="working..."></a>		
+		<br />
+		<div class="btn large info right" id="submitbutton" data-loading-text="working...">Can you handle the truth?</div>	
 	</form>
 </div>
-
+<div id="result">
+</div>
+<div id="sneak">
+	The values you input on the form are plugged into the following formula:
+		<br />
+		<img src="./images/formula.jpeg" id="formula">
+		<br />
+	If the resulting value is greater than XX, it is indeed "too soon."<br />
+	If not, it's just soon enough. <br />
+<span id="homelink">Go back</span>
+</div>
 </div>
 	<div id="footer">TooSoonTest assumes no responsibility for jokes that don't land. &copy;2011 TooSoonTest</div>
 </body>
